# xiaozhi-mcp-music

./: .env.example  .gitignore  Dockerfile  README.md  file_upnp_mcp.py  main.js  main.py  mcp_config.json  pyproject.toml  qqmusic_client.py  qqmusic_mcp.py  qqmusic_mcp_manifest.json  qqmusic_service.py
